[package]
name = "mdns-repeater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = { version = "0.3.4", features = ["reuseport"] }
lazy_static = { version = "1.4.0" }
if-addrs2 = "0.10.2"
clap = { version = "4.4.3", features = ["derive"] }
